[tool.poetry]
name = "concord"
version = "0.1.0"
description = ""
authors = ["Dawid Szymaniak <dawid.szymaniak.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.black]
line-length = 88
target-version = ["py312"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
