[tool.poetry]
name = "concord"
version = "0.1.0"
description = ""
authors = ["Dawid Szymaniak <dawid.szymaniak.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.8"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
enable_incomplete_feature = ["NewGenericSyntax"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
